Integration test has been modified.  Test depends on EasyMock.  Also, file filter based on header information has been added for XGMML.
git-svn-id: http://chianti.ucsd.edu/svn@16197 0ecc0d97-ab19-0410-9704-bfe1a75892f5